fix: 사이드, 아이디어 필터 seperator 기준으로 gap이 아닌 padding으로 처리하도록 한다

--- a/src/pages/IdeaPage/IdeaPage.module.scss
+++ b/src/pages/IdeaPage/IdeaPage.module.scss
@@ -150,10 +150,9 @@
           }
         }
 
-        column-gap: 6px;
-
         .seperator {
           cursor: default;
+          padding: 0px 6px;
         }
 
         .Typography {
