--- a/src/pages/SidePage/SidePage.module.scss
+++ b/src/pages/SidePage/SidePage.module.scss
@@ -174,10 +174,9 @@
         }
       }
 
-      column-gap: 6px;
-
       .seperator {
         cursor: default;
+        padding: 0px 6px;
       }
 
       .Typography {
